--- a/meta_mmd/book.bib
+++ b/meta_mmd/book.bib
@@ -314,23 +314,18 @@
 
 @article{millerMagicalNumberSeven1956,
   title = {The {{Magical Number Seven}}, {{Plus}} or {{Minus Two}}: {{Some Limits}} on {{Our Capacity}} for {{Processing Information}}},
-  volume = {63},
   language = {en},
-  journal = {The Psychological Review},
   author = {Miller, George A},
   year = {1956},
-  pages = {81-97},
   file = {/Users/davidjohnbaker/Zotero/storage/ED3TZ929/Miller - The Magical Number Seven, Plus or Minus Two Some .pdf}
 }
 
 @article{glanzerTwoStorageMechanisms1966,
   title = {Two {{Storage Mechanisms}} in {{Free Recall I}}},
-  volume = {5},
   language = {en},
-  journal = {Journal of Verbal Learning and Verbal Behavior},
-  author = {Glanzer, Murray},
+  author = {GLANZER, MURRAY},
   year = {1966},
-  pages = {351-360},
+  pages = {10},
   file = {/Users/davidjohnbaker/Zotero/storage/G8SR65D6/GLANZER - Two Storage Mechanisms in Free Recall I.pdf}
 }
 
@@ -398,7 +393,6 @@
   title = {Music and {{Nonmusical Abilities}}},
   abstract = {Reports that exposure to music causes benefits in nonmusical domains have received widespread attention in the mainstream media. Such reports have also influenced public policy. The so-called ``Mozart effect'' actually refers to two relatively distinct phenomena. One concerns short-term increases in spatial abilities that are said to occur from listening to music composed by Mozart. The other refers to the possibility that formal training in music yields nonmusical benefits. A review of the relevant findings indicates that the shortterm effect is small and unreliable. Moreover, when it is evident, it can be explained by between-condition differences in the listener's mood or levels of cognitive arousal. By contrast, the effect of music lessons on nonmusical aspects of cognitive development is still an open question. Several studies have reported positive associations between formal music lessons and abilities in nonmusical (e.g., linguistic, mathematical, and spatial) domains. Nonetheless, compelling evidence for a causal link remains elusive.},
   language = {en},
-  journal = {Annals of the New York Academy of Sciences},
   author = {Schellenberg, E Glenn},
   year = {2017},
   pages = {17},
@@ -448,7 +442,6 @@
 @article{klonoskiImprovingDictationAuralSkills2006,
   title = {Improving {{Dictation}} as an {{Aural}}-{{Skills Instructional Tool}}},
   language = {en},
-  journal = {Music Educators Journal},
   author = {Klonoski, Edward},
   year = {2006},
   pages = {6},
@@ -644,10 +637,8 @@
 }
 
 @phdthesis{sisleyCOMPARATIVESTUDYAPPROACHES2008,
-  address = {Kent, Ohio},
   title = {A {{COMPARATIVE STUDY OF APPROACHES TO TEACHING MELODIC DICTATION}}},
   language = {en},
-  school = {Kent State University},
   author = {Sisley, Beth Ann},
   year = {2008},
   file = {/Users/davidjohnbaker/Zotero/storage/SA6JUK77/Sisley - A COMPARATIVE STUDY OF APPROACHES.pdf}
@@ -682,16 +673,13 @@
   doi = {10.1016/B978-0-12-381460-9.00012-2}
 }
 
-@article{rohrmeierBridgingMusicTheory2013,
+@article{rohrmeierBridgingMusicTheory2011,
   title = {Bridging {{Music Theory}}, {{Cognitive}} and {{Computational Approaches}}},
-  volume = {10},
   abstract = {This article contributes to an interdisciplinary discussion of ways in which musictheoretical, cognitive, and computational accounts of musical expectancy may be bridged. It introduces some fundamental concepts concerning modeling, computation, representation, and some of their implications for theory building. Taking Markov models as a case in point, this paper illustrates in detail core notions of representation, model structure, parameter estimation, context-dependency, sparsity and overfitting, as well as the distinction between different levels of expectancy (short-term vs. long-term and knowledge-driven vs. data-driven vs. veridical) that interact in the context of musical listening. The final part compares local and hierarchical accounts of music and analyzes phenomena of nested implication-realization patterns, revision, and garden-path effects.},
   language = {en},
-  number = {2},
-  journal = {ZGMTH},
   author = {Rohrmeier, Martin},
-  year = {2013},
-  pages = {343-371},
+  year = {2011},
+  pages = {30},
   file = {/Users/davidjohnbaker/Zotero/storage/5BVCGSI8/Rohrmeier - Bridging Music Theory, Cognitive and Computational.pdf}
 }
 
@@ -906,7 +894,6 @@
 }
 
 @phdthesis{herffMemoryMelodyInvestigating2017,
-  address = {Sydney, Australia},
   title = {Memory for {{Melody}} : {{Investigating}} the Link between Experience, Perception, and Memory Formation},
   language = {en},
   school = {Western Sydney University},
@@ -920,7 +907,6 @@
   doi = {10.31234/osf.io/wgjyv},
   abstract = {Two approaches exist for explaining harmonic expectation. The sensory approach claims that harmonic expectation is a low-level process driven by sensory responses to acoustic properties of musical sounds. Conversely, the cognitive approach describes harmonic expectation as a high-level cognitive process driven by the recognition of syntactic structure learned through experience. Many previous studies have sought to distinguish these two hypotheses, largely yielding support for the cognitive hypothesis. However, subsequent re-analysis has shown that most of these results can parsimoniously be explained by a computational model from the sensory tradition, namely Leman's (2000) model of auditory shortterm memory (Bigand, Delb\'e, Poulin-Charronnat, Leman, \& Tillmann, 2014). In this research we re-examine the explanatory power of auditory short-term memory models, and compare them to a new model in the Information Dynamics Of Music (IDyOM) tradition, which simulates a cognitive theory of harmony perception based on statistical learning and probabilistic prediction. We test the ability of these models to predict the surprisingness of chords within chord sequences (N = 300), as reported by a sample group of university undergraduates (N = 50). In contrast to previous studies, which typically use artificial stimuli composed in a classical idiom, we use naturalistic chord sequences sampled from a large dataset of popular music. Our results show that the auditory short-term memory models have remarkably low explanatory power in this context. In contrast, the new statistical learning model predicts surprisingness ratings relatively effectively. We conclude that auditory short-term memory is insufficient to explain harmonic expectation, and that cognitive processes of statistical learning and probabilistic prediction provide a viable alternative.},
   language = {en},
-  journal = {PREPRINT},
   author = {Harrison, Peter M . C. and Pearce, Marcus Thomas},
   year = {2018},
   file = {/Users/davidjohnbaker/Zotero/storage/JKCLWJP7/Harrison and Pearce - Dissociating sensory and cognitive theories of har.pdf}
@@ -1003,13 +989,9 @@
 
 @article{ericssonRoleDeliberatePractice1993,
   title = {The {{Role}} of {{Deliberate Practice}} in the {{Acquisition}} of {{Expert Performance}}},
-  volume = {100},
   language = {en},
-  number = {3},
-  journal = {Psychological Review},
   author = {Ericsson, K Anders and Krampe, Ralf Th and {Tesch-Romer}, Clemens},
   year = {1993},
-  pages = {363-406},
   file = {/Users/davidjohnbaker/Zotero/storage/NEMG88KE/Ericsson et al. - The Role of Deliberate Practice in the Acquisition.pdf}
 }
 
@@ -1030,13 +1012,10 @@
 
 @article{deutschMusicPerception1980,
   title = {Music {{Perception}}},
-  volume = {66},
   language = {en},
-  number = {2},
-  journal = {The Musical Quarterly},
   author = {Deutsch, Diana},
   year = {1980},
-  pages = {165-179},
+  pages = {16},
   file = {/Users/davidjohnbaker/Zotero/storage/ZNKAIVHD/Deutsch - Music Perception.pdf}
 }
 
@@ -1373,13 +1352,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{spearmanGeneralIntelligenceObjectively1904,
   title = {"{{General Intelligence}}," {{Objectively Determined}} and {{Measured}}},
-  volume = {15},
   language = {en},
-  number = {2},
-  journal = {The American Journal of Psychology,},
   author = {Spearman, Charles},
   year = {1904},
-  pages = {201-292},
+  pages = {93},
   file = {/Users/davidjohnbaker/Zotero/storage/ZEKBJLEP/General Intelligence, Objectively Determined and.pdf}
 }
 
@@ -1473,7 +1449,7 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{kopiezAufSucheNach2011,
   title = {Auf Der {{Suche}} Nach Den ``{{Popularit\"atsfaktoren}}'' in Den {{Song}}-{{Melodien}} Des {{Beatles}}-{{Albums Revolver}}: {{Eine}} Computergest\"utzte {{Feature}}-{{Analyse}} [{{In}} Search of Features Explaining the Popularity of the Tunes from the {{Beatles}} Album {{Revolver}}: {{A}} Computer-Assisted Feature Analysis].},
-  journal = {Musik und Popularitat},
+  journal = {Musik und Popularitat. Beitrage zu einer Kulturgeschichte zwischen},
   author = {Kopiez, Reinhard and Mullensiefen, Daniel},
   year = {2011},
   pages = {207--225}
@@ -1541,10 +1517,8 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{cuthbertMusic21ToolkitComputerAided2010,
   title = {Music21: {{A Toolkit}} for {{Computer}}-{{Aided Musicology}} and {{Symbolic Music Data}}},
-  volume = {637-642},
   abstract = {Music21 is an object-oriented toolkit for analyzing, searching, and transforming music in symbolic (scorebased) forms. The modular approach of the project allows musicians and researchers to write simple scripts rapidly and reuse them in other projects. The toolkit aims to provide powerful software tools integrated with sophisticated musical knowledge to both musicians with little programming experience (especially musicologists) and to programmers with only modest music theory skills.},
   language = {en},
-  journal = {11th International Society for Music Information Retrieval Conference (ISMIR 2010)},
   author = {Cuthbert, Michael Scott and Ariza, Christopher},
   year = {2010},
   pages = {7},
@@ -2007,9 +1981,9 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 }
 
 @phdthesis{pearceConstructionEvaluationStatistical2005,
-  address = {London, England},
+  address = {Department of Computer Science},
   title = {The Construction and Evaluation of Statistical Models of Melodic Structure in Music Perception and Composition.},
-  school = {City University of London},
+  school = {City University of London.},
   author = {Pearce, Marcus},
   year = {2005}
 }
@@ -2495,7 +2469,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 }
 
 @phdthesis{krofProcessMusickingAlternative2014,
-  address = {Lincoln, Nebraska},
   title = {The {{Process}} of {{Musicking}}: {{An Alternative}} to {{Melodic Dictation}} and {{Other Activities Involved}} in the {{Undergraduate Music Program}}},
   language = {en},
   school = {The Graduate College at the University of Nebraska},
@@ -2951,13 +2924,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{jacobyPerceptualEnhancementPersistent1983,
   title = {Perceptual {{Enhancement}}: {{Persistent Effects}} of an {{Experience}}},
-  volume = {9},
   language = {en},
-  number = {1},
-  journal = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
   author = {Jacoby, Larry L},
   year = {1983},
-  pages = {21-38},
+  pages = {18},
   file = {/Users/davidjohnbaker/Zotero/storage/QJ4QA4T3/Jacoby - Perceptual Enhancement Persistent Effects of an E.pdf}
 }
 
@@ -2996,13 +2966,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{mandlerNonspecificEffectsExposure1987,
   title = {Nonspecific {{Effects}} of {{Exposure}} on {{Stimuli That Cannot Be Recognized}}},
-  volume = {13},
   language = {en},
-  number = {4},
-  journal = {Journal for Experimental Psychology: Learning, Memory, and Cogntion},
   author = {Mandler, George},
   year = {1987},
-  pages = {646-648},
+  pages = {3},
   file = {/Users/davidjohnbaker/Zotero/storage/G6GFR3YD/Mandler - Nonspecific Effects of Exposure on Stimuli That Ca.pdf}
 }
 
@@ -3392,7 +3359,7 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   isbn = {978-0-393-91150-3},
   lccn = {MT870.B485 N5 2011},
   publisher = {{W.W. Norton}},
-  author = {Berkowitz, Sol and Fontrier, Gabriel and Kraft, Leo and Goldstein, Perry and Smaldone, Edward},
+  editor = {Berkowitz, Sol},
   year = {2011},
   keywords = {Sight-singing},
   note = {OCLC: ocn653123073}
@@ -3404,8 +3371,7 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   isbn = {978-0-393-61448-0},
   language = {Some selections with texts in various languages.},
   publisher = {{Norton}},
-  author = {Karpinski, Gary S},
-  collaborator = {Kram, Richard},
+  collaborator = {Karpinski, Gary S and Kram, Richard and Karpinski, Gary S},
   year = {2017},
   note = {OCLC: 994228050}
 }
@@ -3439,11 +3405,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   file = {/Users/davidjohnbaker/Zotero/storage/U3CUSLG7/VanHandel and Song - 2010 - The Role of Meter in Compositional Style in 19th C.pdf}
 }
 
-@article{danieleInterplayLinguisitcHistorical2004,
-  title = {The {{Interplay}} of {{Linguisitc}} and {{Historical Influences}} on {{Musical Rhythm}} in {{Different Cultures}}},
+@article{danieleINTERPLAYLINGUISTICHISTORICAL2004,
+  title = {{{THE INTERPLAY OF LINGUISTIC AND HISTORICAL INFLUENCES ON MUSICAL RHYTHM IN DIFFERENT CULTURES}}},
   abstract = {New techniques for comparing rhythm in language and music [1] and new data on musical rhythm from a range of Western societies [2] provide an opportunity to study the relationship between linguistic and musical rhythm in a number of cultures. Specifically, one can ask if ``stress-timed'' and ``syllable-timed'' languages are associated with distinctive musical rhythms. If so, then it might make sense to speak of stress-timed and syllable-timed music. In conducting such studies it is important to bear in mind that in any given culture there may be historical musical influences which run counter to linguistic influences. We illustrate this point with an examination of German/Austrian music. German is a stress-timed language but it appears that the rhythm of much German/Austrian music (especially during the Baroque and Classical eras) does not reflect this linguistic rhythm [2]. This may be due to the well-known influence of Italian music on German music during these eras [3]. Some support for this idea comes from a historical analysis of German/Austrian music, which shows that this music becomes more ``stress-timed'' after the end of the Classical period.},
   language = {en},
-  journal = {Proceedings of the 8th International Conference on Music Perception and Cognition, Aug 3-7,2004, Northwestern University},
   author = {Daniele, Joseph R and Patel, Aniruddh D},
   year = {2004},
   pages = {5},
@@ -3521,10 +3486,9 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   title = {Librosa: {{Audio}} and {{Music Signal Analysis}} in {{Python}}},
   abstract = {This document describes version 0.4.0 of librosa: a Python package for audio and music signal processing. At a high level, librosa provides implementations of a variety of common functions used throughout the field of music information retrieval. In this document, a brief overview of the library's functionality is provided, along with explanations of the design goals, software development practices, and notational conventions.},
   language = {en},
-  journal = {Proceeedings of the 14th Python in Science Conference},
   author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel P W and McVicar, Matt and Battenberg, Eric and Nieto, Oriol},
   year = {2015},
-  pages = {18-24},
+  pages = {7},
   file = {/Users/davidjohnbaker/Zotero/storage/R956HFDU/McFee et al. - 2015 - librosa Audio and Music Signal Analysis in Python.pdf}
 }
 
@@ -3545,13 +3509,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{bartlettRecognitionTransposedMelodies1980,
   title = {Recognition of {{Transposed Melodies}}: {{A Key}}-{{Distance Effect}} in {{Developmental Perspective}}},
-  volume = {6},
   language = {en},
-  number = {3},
-  journal = {Journal of Experimental Psychology},
   author = {Bartlett, James C and Dowling, W Jay},
   year = {1980},
-  pages = {501-515},
+  pages = {15},
   file = {/Users/davidjohnbaker/Zotero/storage/JDT4K45X/Bartlett and Dowling - Recognition of Transposed Melodies A Key-Distance.pdf}
 }
 
@@ -3620,13 +3581,10 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{cicchettiGuidelinesCriteriaRules1994,
   title = {Guidelines, {{Criteria}}, and {{Rules}} of {{Thumb}} for {{Evaluating Normed}} and {{Standardized Assessment Instruments}} in {{Psychology}}},
-  volume = {6},
   language = {en},
-  number = {4},
-  journal = {Psychological Assessment},
   author = {Cicchetti, Domenic V},
   year = {1994},
-  pages = {258-290},
+  pages = {7},
   file = {/Users/davidjohnbaker/Zotero/storage/AJL272WL/Cicchetti - Guidelines, Criteria, and Rules of Thumb for Evalu.pdf}
 }
 
@@ -4016,7 +3974,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 }
 
 @phdthesis{thompsonPitchInternalizationStrategies2003,
-  address = {Nebraska},
   title = {Pitch Internalization Strategies of Professional Musicians},
   school = {University of Oklahoma},
   author = {Thompson, Kathy},
@@ -4213,11 +4170,8 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
 
 @article{parncuttSystematicMusicologyHistory2007,
   title = {Systematic {{Musicology}} and the {{History}} and {{Future}} of {{Western Musical Scholarship}}},
-  volume = {1},
   abstract = {Systematic musicology is an um- \"Ozet. Sistematik m\"uzikoloji, m\"uzi in belirli brella term, used mainly in Central Europe, for g\"or\"un\"umlerinden daha {\c c}ok genel olarak subdisciplines of musicology that are primarily m\"uzikle ilgilenen m\"uzikolojinin alt disiplinleri concerned with music in general, rather than i{\c c}in as\i{}l olarak Orta Avrupa'da kullan\i{}lan specific manifestations of music. This article  emsiye bir terimdir. Bu makale, kavram\i{} aims to explain the concept in English to uluslararas\i{} akademik m\"uzik ara t\i{}rmac\i{}lar\i{}na international music scholars. Scientific sys-  ngilizce a{\c c}\i{}klamay\i{} ama{\c c}lar. Bilimsel sistematic musicology (or scientific musicology) tematik m\"uzikoloji (ya da bilimsel m\"uzikoloji) is primarily empirical and data-oriented; it aslen ampirik ve veri-y\"onelimlidir; ampirik involves empirical psychology and sociology, psikoloji ve sosyoloji, akustik, fizyoloji, sinir acoustics, physiology, neurosciences, cogni- bilimleri, bili sel bilimler, hesaplamay\i{} ve tive sciences, and computing and technology. teknolojiyi kapsar.  nsan bilimleri sistematik Humanities systematic musicology (or cultural m\"uzikoloji (ya da k\"ult\"urel m\"uzikoloji) felsefi musicology) involves disciplines and para- estetik, kuramsal sosyoloji, g\"ostergebilim, digms such as philosophical aesthetics, theo- yorumbilgisi, m\"uzik ele tirisi, k\"ult\"urel {\c c}al\i{} retical sociology, semiotics, hermeneutics, malar ve cinsiyet {\c c}al\i{} malar\i{} gibi disiplinleri music criticism, and cultural and gender stu- ve paradigmalar\i{} kapsar. Sistematik m\"uzikodies. The discipline of systematic musicology loji disiplini, karde  disiplinler olan tarihsel is less unified than its sister disciplines histori- m\"uzikoloji ve etnom\"uzikolojiye g\"ore daha az cal musicology and ethnomusicology: its b\"ut\"unseldir: kapsam\i{} ve y\"ontemleri daha fazla contents and methods are more diverse and {\c c}e itlidir ve hem akademik hem de pratik tend to be more closely related to parent disci- olarak m\"uzikoloji d\i{} \i{}ndaki akraba disipplines, both academic and practical, outside of linlerle daha fazla ili kili olma e ilimindedir. musicology. The diversity of systematic musi- Sistematik m\"uzikolojinin bu {\c c}e itlili i bir yere cology is to some extent compensated for by kadar onu olu turan altdisiplinlerin sistemi interdisciplinary interactions within the system i{\c c}indeki disiplinleraras\i{} etkile imlerle telafi of subdisciplines that make it up (systemic edilir (sistemik m\"uzikoloji). Sistematik m\"umusicology). The origins of systematic musi- zikolojinin Avrupa'daki k\"okenleri antik cology in Europe can be traced to ancient Yunan'da bulunabilir. Tarihsel m\"uzikoloji ve Greece. Historical musicology and ethnomusi- etnom\"uzikoloji {\c c}ok daha gen{\c c} disiplinlerdir ve cology are much younger disciplines, and the bu \"u{\c c} disiplinin g\"oreli \"onemi son birka{\c c} y\"uzy\i{}l relative importance of the three has fluctuated boyunca \"onemli \"ol{\c c}\"ude ini li {\c c}\i{}k\i{} l\i{} bir seyir considerably during recent centuries. Today, izlemi tir. Bug\"un, m\"uzikolojinin bu \"u{\c c} altmusicology's three broad subdisciplines are disiplini ara t\i{}rma etkinli inin hacmi anabout equally important in terms of the volume lam\i{}nda hemen hemen e it \"onemdedir.},
   language = {en},
-  number = {1},
-  journal = {Journal of Interdisciplinary Music Studies},
   author = {Parncutt, Richard},
   year = {2007},
   pages = {32},
@@ -4607,7 +4561,6 @@ Conclusions The three meta-analyses revealed a small effect size for long-term m
   title = {Instantaneous Consonance in the Perception and Composition of {{Western}} Music},
   doi = {10.31234/osf.io/6jsug},
   abstract = {Instantaneous consonance is a salient perceptual phenomenon corresponding to the perceived pleasantness of simultaneously sounding musical notes. Various competing theories of consonance have been proposed over the centuries, but recently a consensus has developed that consonance is primarily driven by periodicity perception. Here we question this view, substantiating our argument by critically reviewing historic consonance research from a broad variety of disciplines, re-analyzing consonance perception data from four previous behavioral studies representing more than 500 participants, and modeling three Western musical corpora representing more than 100,000 compositions. We conclude that consonance is a composite phenomenon that derives in large part from three phenomena: spectral interference, periodicity, and cultural familiarity. We formalize this conclusion with a computational model that predicts a musical chord's perceptual consonance from these three features, and release this model in an open-source R package, incon, alongside 15 other computational models also evaluated in this paper. We hope that this package will facilitate further psychological and musicological research into instantaneous consonance.},
-  journal = {PREPRINT},
   author = {Harrison, Peter and Pearce, Marcus Thomas},
   year = {2019},
   file = {/Users/davidjohnbaker/Zotero/storage/K8HQR3EF/Harrison and Pearce - Instantaneous consonance in the perception and com.pdf}
